prqlc/crates/main/src/semantic/resolver/snapshots/prqlc_main__semantic__resolver__test__frames_and_names-2.snap
---
source: prqlc/crates/main/src/semantic/resolver/mod.rs
expression: "resolve_ty(r#\"\n            from table_1\n            join customers (==customer_no)\n            \"#).unwrap()"
---
kind:
  Array:
    kind:
      Tuple:
        - Single:
            - table_1
            - kind:
                Tuple:
                  - All:
                      ty:
                        kind: Any
                        infer: true
                      exclude: []
              lineage: 196
              instance_of:
                - default_db
                - table_1
        - Single:
            - customers
            - kind:
                Tuple:
                  - All:
                      ty:
                        kind: Any
                        infer: true
                      exclude: []
              lineage: 189
              instance_of:
                - default_db
                - customers

