prqlc/crates/main/src/semantic/resolver/snapshots/prqlc_main__semantic__resolver__test__frames_and_names.snap
---
source: prqlc/crates/main/src/semantic/resolver/mod.rs
expression: "resolve_lineage(r#\"\n            from orders\n            select {customer_no, gross, tax, gross - tax}\n            take 20\n            \"#).unwrap()"
---
columns:
  - Single:
      name:
        - orders
        - customer_no
      target_id: 205
      target_name: ~
  - Single:
      name:
        - orders
        - gross
      target_id: 206
      target_name: ~
  - Single:
      name:
        - orders
        - tax
      target_id: 207
      target_name: ~
  - Single:
      name: ~
      target_id: 208
      target_name: ~
inputs:
  - id: 204
    name: orders
    table:
      - default_db
      - orders

